code25_all/python/1035581.txt
C:\tmp\scons>c:\appl\python\3.0.1\Scripts\scons
Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "c:\appl\python\3.0.1\Lib\site-packages\scons-1.2.0\SCons\__init__.py", l
ine 43, in <module>
    import SCons.compat
  File "c:\appl\python\3.0.1\Lib\site-packages\scons-1.2.0\SCons\compat\__init__
.py", line 208
    raise Error, "Cannot move a directory '%s' into itself '%s'." % (src, dst)
               ^
SyntaxError: invalid syntax

